--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
+    "passport-linkedin-oauth2": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.0.0"
   }
